# mirra_backend

./: .credo.exs  .formatter.exs  .gitignore  .iex.exs  .tool-versions  Cargo.toml  LICENSE  Makefile  README.md  _messages.proto  compose.yaml  deploy.sh  devenv.nix  docker-compose.yml  dockerfile  entrypoint.sh  flake.nix  grafana_arena_dashboard.json  lag_spikes.sh  messages.proto  mix.exs  package-lock.json  prometheus.yml  script.exs  shell.nix
.github/: pull_request_template.md
assets/: package-lock.json  package.json  tailwind.config.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
devenv/: devenv.nix
devops/: arena-start.sh  deploy-macos.sh  deploy.sh  deploy_arena.sh  entrypoint-macos.sh  entrypoint.sh  infra_docs.md  server_specs.sh  setup-admin-deps.sh
docs/: README.md  collision-detection.md
documentation/: book.toml
lib/: dark_worlds_server.ex  dark_worlds_server_web.ex  game_backend.ex  lambda_game_backend.ex  lambda_game_backend_web.ex  lambda_game_engine.ex  myrra_backend.ex  myrra_engine.ex  physics.ex  state_manager_backend.ex
load_test/: .gitignore  README.md  mix.exs  setup_game_server.sh  setup_load_client.sh
native/game_backend/: Cargo.toml  README.md
native/game_backend/src/: character.rs  collisionable.rs  config.rs  effect.rs  game.rs  lib.rs  loot.rs  map.rs  player.rs  projectile.rs  skill.rs  space_hash_grid.rs  space_hash_grid_2.rs
native/lambda_game_engine/: Cargo.toml  README.md
native/lambda_game_engine/src/: character.rs  config.rs  effect.rs  game.rs  lib.rs  loot.rs  map.rs  myrra_engine.rs  player.rs  projectile.rs  skill.rs
native/lambda_game_engine/src/myra_engine/: game_configuration.rs  loot.rs  utils.rs
native/lambda_game_engine/src/myrra_engine/: board.rs  game.rs  player.rs  skills.rs  time_utils.rs
priv/: config.json  map_collisionables.json  test_config.json
test/: game_backend_test.exs  lambda_game_engine_test.exs  test_helper.exs  (+1 more)
(+1253 files in other folders)
