[workspace]

members = [
    "native/game_backend",
]

## to use the edition 2021 resolver, specify `workspace.resolver = "2"` in the workspace root's manifest
## some crates are on edition 2021 which defaults to `resolver = "2"`, but virtual workspaces default to `resolver = "1"`
resolver = "2"

## profiles for the non root package will be ignored, specify profiles at the workspace root
[profile.release]
lto = true
codegen-units = 1
