[package]
name = "game_backend"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "game_backend"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
rustler = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Dependencies for game_backend module
# remove after removal of module
itertools = "0.12.0"
rand = "0.8.5"
strum = "0.25.0"
strum_macros = "0.25.3"
