[package]
name = "lambda_game_engine"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "lambda_game_engine"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Dependencies for myrra_engine module
# remove after removal of module
itertools = "0.11.0"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
